# AutoMeKin

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  config.status  configure  configure.ac  install-required-packages-centos7.sh  install-required-packages-sl7.sh  install-required-packages-ubuntu-16.4lts.sh  license.txt
autom4te.cache/: output.0  requests  traces.0  traces.1
docs/: Makefile  Makefile.in
examples/: Makefile  Makefile.am  Makefile.in  diels.xyz
modules/: 2018  2018ft2  Makefile  Makefile.am  Makefile.in
scripts/: FormulaPROD.sh  GUI.py  Makefile  Makefile.am  Makefile.in  SCREENING.sh  SPRINT_screening.sh  SPRINT_screening_assoc.sh  amk.sh  amk_parallel.sh  compare_minfailed_with_other_minima_ll.sh  conf_isomer_ts.sh  createMat.sh  createMat2.sh  createMat3.sh  createMatnbo.sh  createthdist.sh  createthdist0.sh  deg_form.sh  diff.sh  final.sh  format.sh  geom.sh  get_NM_mopac.sh  get_geom_mopac.sh  get_minn.sh  getminfminr.sh  gui.py  gui.sh  gui0.py  identifyprod.sh  initialqv_mopac_samp1.sh  irc.sh  irc_analysis.sh  kinetics.sh  kmc.sh  llcalcs.sh  min.sh  minandprod.sh  mopac_freq_ts.sh  (+35 more)
scripts/CATscripts/: Barrierless1_CAT.sh  Barrierless2_CAT.sh  FormulaMOL.sh  FormulaPROD_ef.sh  Makefile  Makefile.am  Makefile.in  atsdum2.sh  balecalc.sh  catalysis.py  code_prod.sh  create_kmc_template.sh  fl_frag.sh  get_NIF.sh  get_dist.sh  get_e+g.sh  get_lastgeomg09.sh  get_mi.sh  get_minn_fromoverall.sh  get_n_atoms.sh  get_rate.sh  get_rate2.sh  log_to_rxyz.sh  makekmci.sh  matchmin.sh  matchmin2.sh  put_frag_last.sh  queueHLoptdown_sub.sh  queue_kmc.sh  reunite_prods.sh  sep_frag.sh  subsystems.py  swap.sh
scripts/HLscripts/: BARRLESSRXN1.sh  BARRLESSRXN2.sh  FINAL.sh  IDENTIFYPROD.sh  IRC.sh  IRC_ANALYSIS.sh  KMC.sh  MIN.sh  Makefile  Makefile.am  Makefile.in  PLOT_RELEVANT.sh  PRODs.sh  REMOVE_TS.sh  RXN_NETWORK.sh  RXN_NETWORK1.sh  SORT.sh  TS.sh  compare_frags.sh  compare_minfailed_with_other_minima_hl.sh  get_NM_g09.sh  get_NM_g09_molden.sh  get_energy_g09_CCSDT.sh  get_energy_g09_MP2.sh  get_freq_g09.sh  get_geom_g09.sh  get_geom_irc_g09.sh  get_minfminr_g09.sh  hlcalcs.sh  linked_paths.sh  makerxyz.sh  nfrag.sh  noe.sh  reduce_RXNet.py  runIRC.sh  runMIN.sh  runTS.sh
scripts/MOPAC_DEV/: Makefile  Makefile.am  Makefile.in
share/: Makefile  Makefile.am  Makefile.in  diagram_template0  hl_input_template_notemp  hl_input_template_qm  list_of_atomic_radii  pop_template.gnu  ts_templatefast  ts_templateslow
share/CAT/: Makefile  Makefile.am  Makefile.in  fit.gp
src/: Makefile  Makefile.am  Makefile.in  atsymb.mod  bbfs.f90  constants.mod  constants_rrkm.mod  diff_and_diss.f90  diff_bim.f90  diss.f90  instant_temp.f90  intern2.f90  kmc.f90  kmc_bim.f90  lowercase.f90  omegas.f90  omegas.mod  rancom.mod  rescale.f90  rrkm.f  sprint.f  sprint2.f  symm.f  symm0.f  termo.f90  tst_bim.f90
src/HL/: Makefile  Makefile.in
