dist_bin_SCRIPTS = chemical_formula.sh \
	      compare_minfailed_with_other_minima_ll.sh\
	      createMat2.sh createMat3.sh createMatnbo.sh createMat.sh \
	      createthdist0.sh createthdist.sh deg_form.sh deg.sh diffGT.sh\
	      diff.sh format.sh FormulaPROD.sh geom.sh get_freq_mopac.sh \
	      get_geom_mopac.sh getminfminr.sh get_minn.sh gui0.py gui.py \
	      GUI.py gui.sh identifyprod.sh initialqv_mopac_samp1.sh \
	      initialqv_mopac_samp2.sh irc_analysis.sh irc.sh kmc.sh \
	      minandprod.sh min.sh mopac_freq_ts.sh ntraj.sh \
	      plot_relevant.sh rate_dependence1.py rate_dependence2.py \
	      reduce3.sh reduce2.sh reduce.sh rotate.sh runAS.sh runGP.sh \
	      runirc.sh runjob.sh runmin.sh rxn_network1.sh rxn_network.sh \
	      SCREENING.sh select_AandB.sh select_assoc.sh sel_mol.sh \
	      simplifyRXN.sh snapshots_mopac.sh sort_assoc.sh sort.sh \
	      SPRINT_screening_assoc.sh SPRINT_screening.sh symm.sh \
	      thermochem.py tors.sh tsscds_parallel.sh tsscds.sh \
	      utils.sh llcalcs.sh final.sh get_NM_mopac.sh get_geom_thermo_mopac.sh  \
              conf_isomer_ts.sh tsll_view.sh track_view.sh \
              window.sh select.sh redo_screening.sh  kinetics.sh \
              slurm_settings_ft2.sh abort.sh remove_ts.sh run_test.sh nx.sh


