sharedir=$(prefix)/share
dist_share_DATA=atsymb diagram_template0 diagram_template1 dynamics_template \
	freq_template1 freq_template2 hl_input_template hl_input_template_notemp \
	hl_input_template_qm list_of_atomic_radii path_template \
	sp_template thermo_template ts_templatefast ts_templateslow \
	amk_build g09_test.dat pop_template.gnu

