
bindir= $(exec_prefix)/bin/CATscripts

dist_bin_SCRIPTS= atsdum2.sh balecalc.sh Barrierless1_CAT.sh \
	     Barrierless2_CAT.sh catalysis.py code_prod.sh \
	     create_kmc_template.sh fl_frag.sh FormulaMOL.sh \
	     FormulaPROD_ef.sh get_dist.sh get_e+g.sh \
	     get_lastgeomg09.sh get_minn_fromoverall.sh get_mi.sh \
	     get_n_atoms.sh get_NIF.sh get_rate2.sh get_rate.sh \
	     log_to_rxyz.sh makekmci.sh matchmin2.sh matchmin.sh \
	     put_frag_last.sh queueHLoptdown_sub.sh queue_kmc.sh \
	     reunite_prods.sh sep_frag.sh subsystems.py swap.sh
